# tztail

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: args.rs  converter.rs  format.rs  main.rs  output_formatter.rs  parser.rs  reader.rs
tests/: integration_tests.rs
tests/inputs/: test_read_from_file.txt
