[package]
name = "tztail"
version = "1.1.0"
authors = ["Aswin Karthik <aswinkarthik93@gmail.com>"]
description = "tztail (TimeZoneTAIL) allows you to view logs in the timezone you want"
license-file = "LICENSE-MIT"
documentation = "https://github.com/thecasualcoder/tztail/blob/master/README.md"
repository= "https://github.com/thecasualcoder/tztail"

[dependencies]
regex = "1"
chrono = "0.4"
chrono-tz = "0.5"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]