[package]
name = "tztail"
version = "1.1.1"
authors = ["Aswin Karthik <aswinkarthik93@gmail.com>"]
description = "tztail (TimeZoneTAIL) allows you to view logs in the timezone you want"
license-file = "LICENSE-MIT"
documentation = "https://github.com/thecasualcoder/tztail/blob/master/README.md"
repository= "https://github.com/thecasualcoder/tztail"

[dependencies]
regex = "1"
chrono = "0.4"
chrono-tz = "0.5"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
lazy_static = "1.2.0"
escargot = "0.3.1"
assert_cmd = "0.10.2"